--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -20,7 +20,6 @@ jobs:
       deb_version: ${{ steps.set-vars.outputs.deb_version }}
       gem_version: ${{ steps.set-vars.outputs.gem_version }}
       maven_version: ${{ steps.set-vars.outputs.maven_version }}
-      nuget_version: ${{ steps.set-vars.outputs.nuget_version }}
       pypi_version: ${{ steps.set-vars.outputs.pypi_version }}
       rpm_version: ${{ steps.set-vars.outputs.rpm_version }}
     steps:
@@ -40,8 +39,6 @@ jobs:
           echo "gem_version=${VERSION}.pre.${DATE}.${BUILD}" >> $GITHUB_OUTPUT
           # - MAVEN: 3.8.0-nightly-<YYYYMMDD>.<BUILD>-SNAPSHOT
           echo "maven_version=${VERSION}-nightly-${DATE}.${BUILD}-SNAPSHOT" >> $GITHUB_OUTPUT
-          # - NuGet: 3.8.0-nightly.<YYYYMMDD>.<BUILD>
-          echo "nuget_version=${VERSION}-nightly.${DATE}.${BUILD}" >> $GITHUB_OUTPUT
           # - PyPI: 3.8.0.dev<YYYYMMDD><BUILD>
           echo "pypi_version=${VERSION}.dev${DATE}${BUILD}" >> $GITHUB_OUTPUT
           # - RPM: 3.8.0~0.nightly<YYYYMMDD>.<BUILD>
@@ -52,7 +49,7 @@ jobs:
     uses: ./.github/workflows/build-cpp-nuget-package.yml
     needs: set-version
     with:
-      ice_version: ${{ needs.set-version.outputs.nuget_version }}
+      ice_version: ${{ needs.set-version.outputs.semver_version }}
       source_url: "${{ inputs.repository_url }}/nuget-nightly/"
     secrets:
       NUGET_API_KEY: ${{ secrets.NEXUS_NIGHTLY_NUGET_API_KEY }}
