Add dispatch exceptions to C++. (#3560)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           - os: macos-15
             config: "release"
             # We want to test C++ and Swift only (in each direction)
-            cross_test_flags: "--all-cross --filter cpp --filter swift"
+            cross_test_flags: "--all-cross --filter cpp --filter swift --rfilter Ice/exceptions"
           - os: ubuntu-24.04
             config: "release"
             cross_test_flags: "--all-cross --rfilter Ice/exceptions"
