Add dispatch exception to Ruby

--- a/ruby/ruby/.gitignore
+++ b/ruby/ruby/.gitignore
@@ -9,6 +9,7 @@ Ice/Process.rb
 Ice/PropertiesAdmin.rb
 Ice/PropertyDict.rb
 Ice/RemoteLogger.rb
+Ice/ReplyStatus.rb
 Ice/Router.rb
 Ice/SliceChecksumDict.rb
 Ice/Version.rb
