--- a/.github/workflows/build-brew-bottle.yml
+++ b/.github/workflows/build-brew-bottle.yml
@@ -45,8 +45,9 @@ jobs:
         with:
           upload_file: ./*.bottle.tar.gz
           repository_url: ${{ inputs.repository_url }}
-          repository_username: ${{ secrets.REPOSITORY_USERNAME }}
-          repository_password: ${{ secrets.REPOSITORY_PASSWORD }}
+        env:
+          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
         if: inputs.repository_url != ''
 
       - name: Upload Artifacts
