--- a/.github/workflows/build-brew-bottle.yml
+++ b/.github/workflows/build-brew-bottle.yml
@@ -6,11 +6,23 @@ on:
       ice_version:
         required: false
         type: string
+      repository_url:
+        required: false
+        type: string
+    secrets:
+      REPOSITORY_USERNAME:
+        required: false
+      REPOSITORY_PASSWORD:
+        required: false
   workflow_dispatch:
     inputs:
       ice_version:
         description: "The Ice version to build"
         required: false
+      repository_url:
+        description: "The URL of the repository to publish to"
+        required: false
+        type: string
 
 jobs:
   build-brew-bottle:
@@ -27,6 +39,16 @@ jobs:
         env:
           ICE_VERSION: ${{ inputs.ice_version || '' }}
         run: ./packaging/brew/build-bottle.sh
+
+      - name: Upload Bottle
+        uses: ./.github/actions/upload-nightly
+        with:
+          upload_file: ./*.bottle.tar.gz
+          repository_url: ${{ inputs.repository_url }}
+        env:
+          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
+        if: inputs.repository_url != ''
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
