--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -54,12 +54,36 @@ jobs:
           # - RPM: 3.8.0~0.nightly<YYYYMMDD>.<BUILD>
           echo "rpm_version=${VERSION}~0.nightly${DATE}.${BUILD}" >> $GITHUB_OUTPUT
 
+      - name: Create latest.json
+        run: |
+          echo "{
+            \"semver_version\": \"${{ steps.set-vars.outputs.semver_version }}\",
+            \"deb_version\": \"${{ steps.set-vars.outputs.deb_version }}\",
+            \"gem_version\": \"${{ steps.set-vars.outputs.gem_version }}\",
+            \"maven_version\": \"${{ steps.set-vars.outputs.maven_version }}\",
+            \"pypi_version\": \"${{ steps.set-vars.outputs.pypi_version }}\",
+            \"rpm_version\": \"${{ steps.set-vars.outputs.rpm_version }}\"
+          }" > latest.json
+        shell: bash
+
+      - name: Upload latest.json to nightly repository
+        uses: ./.github/actions/upload-nightly
+        with:
+          upload_file: latest.json
+          repository_url: ${{ inputs.repository_url }}
+        env:
+          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
+
   build-brew-bottle:
     name: Build Brew Bottle
     uses: ./.github/workflows/build-brew-bottle.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
+    secrets:
+      REPOSITORY_USERNAME: ${{ secrets.NEXUS_NIGHTLY_USERNAME }}
+      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
   build-cpp-nuget-package:
     name: Build C++ NuGet Package
