Add dispatch exception to PHP

--- a/php/lib/.gitignore
+++ b/php/lib/.gitignore
@@ -9,6 +9,7 @@ Ice/Process.php
 Ice/PropertiesAdmin.php
 Ice/PropertyDict.php
 Ice/RemoteLogger.php
+Ice/ReplyStatus.php
 Ice/Router.php
 Ice/SliceChecksumDict.php
 Ice/Version.php
