Add missing shell to upload-nightly action

--- a/.github/actions/upload-nightly/action.yml
+++ b/.github/actions/upload-nightly/action.yml
@@ -13,6 +13,7 @@ runs:
   using: "composite"
   steps:
     - name: Upload File
+      shell: bash
       run: |
         curl -u "${REPOSITORY_USERNAME}:${REPOSITORY_PASSWORD}" \
              --upload-file ${inputs.upload_file} \
