--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -33,6 +33,9 @@ jobs:
       pypi_version: ${{ steps.set-vars.outputs.pypi_version }}
       rpm_version: ${{ steps.set-vars.outputs.rpm_version }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set version variables
         id: set-vars
         run: |
