--- a/.github/workflows/build-brew-bottle.yml
+++ b/.github/workflows/build-brew-bottle.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       ice_version:
-        required: false
+        required: true
         type: string
       repository_url:
         required: false
@@ -18,7 +18,7 @@ on:
     inputs:
       ice_version:
         description: "The Ice version to build"
-        required: false
+        required: true
       repository_url:
         description: "The URL of the repository to publish to"
         required: false
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build Brew Bottle
         env:
-          ICE_VERSION: ${{ inputs.ice_version || '' }}
+          ICE_VERSION: ${{ inputs.ice_version }}
         run: ./packaging/brew/build-bottle.sh
 
       - name: Upload Bottle
