--- a/.github/workflows/build-brew-bottle.yml
+++ b/.github/workflows/build-brew-bottle.yml
@@ -9,9 +9,10 @@ on:
       repository_url:
         required: false
         type: string
-    secrets:
-      REPOSITORY_USERNAME:
+      repository_username:
         required: false
+        type: string
+    secrets:
       REPOSITORY_PASSWORD:
         required: false
   workflow_dispatch:
@@ -21,6 +22,10 @@ on:
         required: true
       repository_url:
         description: "The URL of the repository to publish to"
+        required: false
+        type: string
+      repository_username:
+        description: "The username to authenticate with the repository"
         required: false
         type: string
 
@@ -46,7 +51,7 @@ jobs:
           upload_file: ./*.bottle.tar.gz
           repository_url: ${{ inputs.repository_url }}
         env:
-          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_USERNAME: ${{ inputs.repository_username }}
           REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
         if: inputs.repository_url != ''
 
