--- a/.github/workflows/build-gem-packages.yml
+++ b/.github/workflows/build-gem-packages.yml
@@ -9,9 +9,10 @@ on:
       repository_url:
         required: false
         type: string
-    secrets:
-      REPOSITORY_USERNAME:
+      repository_username:
         required: false
+        type: string
+    secrets:
       REPOSITORY_PASSWORD:
         required: false
   workflow_dispatch:
@@ -21,6 +22,10 @@ on:
         required: false
       repository_url:
         description: "The URL of the GEM repository to publish to"
+        required: false
+        type: string
+      repository_username:
+        description: "The username to authenticate with the repository"
         required: false
         type: string
 
@@ -64,5 +69,5 @@ jobs:
              ${{ inputs.repository_url }} || { echo "Upload zeroc-ice-*.gem failed"; exit 1; }
         if: inputs.repository_url != ''
         env:
-          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_USERNAME: ${{ inputs.repository_username }}
           REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
