--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -9,9 +9,11 @@ on:
       repository_url:
         required: false
         type: string
-    secrets:
-      PYPI_USERNAME:
+      repository_username:
+        description: "The username to authenticate with the repository"
         required: false
+        type: string
+    secrets:
       PYPI_PASSWORD:
         required: false
   workflow_dispatch:
@@ -21,6 +23,10 @@ on:
         required: false
       repository_url:
         description: "The URL of the PYPI registry to publish to"
+        required: false
+        type: string
+      repository_username:
+        description: "The username to authenticate with the repository"
         required: false
         type: string
 
@@ -83,6 +89,6 @@ jobs:
           python3 -m pip install twine --user
           python3 -m twine upload --repository-url ${{ inputs.repository_url }} ${{ github.workspace }}/dist/*
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_USERNAME: ${{ inputs.repository_username }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         if: inputs.repository_url != ''
