--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -86,9 +86,9 @@ jobs:
           REPOSITORY_USERNAME: ${{ inputs.repository_username }}
           REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
-  build-brew-bottle:
-    name: Build Brew Bottle
-    uses: ./.github/workflows/build-brew-bottle.yml
+  create:
+    name: Create Brew Tap
+    uses: ./.github/workflows/create-brew-tap.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
