--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -29,3 +29,9 @@ Changelog = "https://github.com/zeroc-ice/ice/blob/main/CHANGELOG-3.8.md"
 [build-system]
 requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ["slice2py"]
+
+[project.scripts]
+slice2py = "slice2py:main"
