--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -9,6 +9,16 @@ on:
       source_url:
         required: false
         type: string
+      repository_url:
+        required: false
+        type: string
+      repository_username:
+        required: false
+        type: string
+    secrets:
+      REPOSITORY_PASSWORD:
+        required: false
+
   workflow_dispatch:
     inputs:
       ice_version:
@@ -16,6 +26,14 @@ on:
         required: false
       source_url:
         description: "The URL of the NuGet repository to download from"
+        required: false
+        type: string
+      repository_url:
+        description: "The URL of the GEM repository to publish to"
+        required: false
+        type: string
+      repository_username:
+        description: "The username to authenticate with the repository"
         required: false
         type: string
 
@@ -51,6 +69,20 @@ jobs:
           StagingDir: "${{ github.workspace }}\\staging"
           # TODO compute this variable see issue #3558
           VCInstallDir: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC"
+
+      - name: Publish MSI
+        run: |
+          curl -u "${REPOSITORY_USERNAME}:${REPOSITORY_PASSWORD}" \
+             --upload-file ice/packaging/msi/bin/x64/Release/*.msi \
+             --output /dev/null \
+             --silent \
+             --fail \
+             --show-error \
+             ${{ inputs.repository_url }}/nightly/ || { echo "Upload failed"; exit 1; }
+        if: inputs.repository_url != ''
+        env:
+          REPOSITORY_USERNAME: ${{ inputs.repository_username }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
 
       - name: Upload MSI
         uses: actions/upload-artifact@v4
