--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -29,7 +29,7 @@ on:
         required: false
         type: string
       repository_url:
-        description: "The URL of the GEM repository to publish to"
+        description: "The URL of the repository to publish to"
         required: false
         type: string
       repository_username:
@@ -78,7 +78,7 @@ jobs:
              --silent \
              --fail \
              --show-error \
-             ${{ inputs.repository_url }}/nightly/ || { echo "Upload failed"; exit 1; }
+             ${{ inputs.repository_url }}/ || { echo "Upload failed"; exit 1; }
         if: inputs.repository_url != ''
         env:
           REPOSITORY_USERNAME: ${{ inputs.repository_username }}
