--- a/.github/workflows/build-nightly-release-workflow.yml
+++ b/.github/workflows/build-nightly-release-workflow.yml
@@ -86,9 +86,9 @@ jobs:
           REPOSITORY_USERNAME: ${{ inputs.repository_username }}
           REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
-  create-brew-tap:
-    name: Create Brew Tap
-    uses: ./.github/workflows/create-brew-tap.yml
+  build-brew-packages:
+    name: Build Brew Packages
+    uses: ./.github/workflows/build-brew-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
