--- a/.github/workflows/build-brew-packages.yml
+++ b/.github/workflows/build-brew-packages.yml
@@ -1,4 +1,4 @@
-name: "Create Brew Tap"
+name: "Build Brew Packages"
 
 on:
   workflow_call:
@@ -30,7 +30,7 @@ on:
         type: string
 
 jobs:
-  create-brew-tap:
+  build-brew-packages:
     runs-on: macos-latest
 
     steps:
@@ -39,6 +39,14 @@ jobs:
 
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
+
+      - name: Tap Nightly Repository
+        env:
+            NIGHTLY_URL: "https://download.zeroc.com/nexus/repository/nightly/homebrew-nightly.git"
+        run: |
+          if git ls-remote $NIGHTLY_URL; then
+            brew tap zeroc-ice/nightly $NIGHTLY_URL
+          fi
 
       - name: Create Nightly Tap
         run: ./packaging/brew/create-tap.sh "zeroc-ice/nightly" "${{ inputs.ice_version }}"
