--- a/.github/workflows/build-swift-package.yml
+++ b/.github/workflows/build-swift-package.yml
@@ -27,24 +27,24 @@ jobs:
       - name: Setup Dependencies
         uses: ./ice/.github/actions/setup-dependencies
 
-      - name: Create IceSwift repository
+      - name: Create ice-swift repository
         run: |
           cd packaging/swift
           ./create-repository.sh "${{ inputs.ice_version }}" "${{ inputs.repository_url }}"
 
-          echo "Testing IceSwift build..."
-          swift build --package-path IceSwift --configuration release
+          echo "Testing ice-swift build..."
+          swift build --package-path ice-swift --configuration release
 
-          # Create bare repository for IceSwift
-          git clone --bare IceSwift IceSwift.git
-          cd IceSwift.git
+          # Create bare repository for ice-swift
+          git clone --bare ice-swift ice-swift.git
+          cd ice-swift.git
 
           git update-server-info
 
       - name: Upload Repository
         run: |
           # Upload tap
-          cd packaging/swift/IceSwift.git
+          cd packaging/swift/ice-swift.git
           find . -type f | while IFS= read -r file; do
             curl -u "${{ inputs.repository_username }}:${{ secrets.REPOSITORY_PASSWORD }}" \
                 --ftp-create-dirs \
@@ -53,6 +53,6 @@ jobs:
                 --silent \
                 --fail \
                 --show-error \
-                ${{ inputs.repository_url }}/IceSwift.git/$file || { echo "Upload failed"; exit 1; }
+                ${{ inputs.repository_url }}/ice-swift.git/$file || { echo "Upload failed"; exit 1; }
           done
         if: inputs.repository_url != ''
