--- a/.github/workflows/build-swift-package.yml
+++ b/.github/workflows/build-swift-package.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Dependencies
-        uses: ./ice/.github/actions/setup-dependencies
+        uses: ./.github/actions/setup-dependencies
 
       - name: Create ice-swift repository
         run: |
